--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2025"
 smithay = { version = "0.3", features = ["backend_winit", "backend_x11", "desktop"] }
 ash = "0.37"
 egui = "0.27"
-eframe = "0.27" # Dla egui z obsługą okien
+eframe = "0.27"
 sysinfo = "0.29"
 clap = { version = "4.4", features = ["derive"] }
 nix = "0.26"
+libc = "0.2"
 log = "0.4"
 env_logger = "0.10"
